--- a/ACTIVIDAD_1_PRESENTACION/nbproject/project.properties
+++ b/ACTIVIDAD_1_PRESENTACION/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ACTIVIDAD_1_PRESENTACION
-main.class=com.mgm.Main
+main.class=com.mgm.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
