--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /CLASIFICANUMEROS/build/
 /VERIFICAPRIMOS/nbproject/private/
 /VERIFICAPRIMOS/build/
+/VERIFICAPOSNEG/nbproject/private/
+/VERIFICAPOSNEG/build/
+/RATONVARCOMP/nbproject/private/
+/RATONVARCOMP/build/
+/RATONSTATES/nbproject/private/
+/RATONSTATES/build/
