--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /RATONVARCOMP/build/
 /RATONSTATES/nbproject/private/
 /RATONSTATES/build/
+/CLASIFICANUMEROS1/nbproject/private/
+/CLASIFICANUMEROS1/build/
+/HILO/nbproject/private/
+/HILO/build/
