--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 /CLASIFICANUMEROS1/build/
 /HILO/nbproject/private/
 /HILO/build/
+/TEMPORIZADOR/nbproject/private/
+/TEMPORIZADOR/build/
+/TOCANDOHILOS/nbproject/private/
+/TOCANDOHILOS/build/
+/SUMANDOCONHILOS/nbproject/private/
