--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 /TOCANDOHILOS/build/
 /SUMANDOCONHILOS/nbproject/private/
 /SUMANDOCONHILOS/build/
+/EJERCICIO13/nbproject/private/
+/EJERCICIO13/build/
+/EJERCICIO14/nbproject/private/
