--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /EJERCICIO13/nbproject/private/
 /EJERCICIO13/build/
 /EJERCICIO14/nbproject/private/
+/EJERCICIO17/nbproject/private/
+/EJERCICIO17/build/
