Subido ejercicio 22 terminado

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /EJERCICIO14/nbproject/private/
 /EJERCICIO17/nbproject/private/
 /EJERCICIO17/build/
+/EJERCICIO22/nbproject/private/
+/EJERCICIO22/build/
