Subidos ejercicios 23,24 funcionando correctamente. Arreglar 19

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 /EJERCICIO22/nbproject/private/
 /EJERCICIO22/build/
 /EJERCICIO19/nbproject/private/
+/EJERCICIO 23/nbproject/private/
+/EJERCICIO 23/build/
+/EJERCICIO24/nbproject/private/
+/EJERCICIO19/build/
+/EJERCICIO24/build/
