Commit: Subido ejercicio adivinar numero Modificado para ser multijugador

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /EJERCICIO24/build/
 /EJERCICIO26/build/
 /EJERCICIO3_TEORIA/nbproject/private/
+/EJERCICIO2_TEORIA_MODIFICADO/nbproject/private/
+/EJERCICIO2_TEORIA_MODIFICADO/build/
