--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /EJERCICIO3_TEORIA/nbproject/private/
 /EJERCICIO2_TEORIA_MODIFICADO/nbproject/private/
 /EJERCICIO2_TEORIA_MODIFICADO/build/
+/EJERCICIO3_TEORIA/build/
