Commit: Subido ejercicio 6 teoria sin funcionar

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /EJERCICIO2_TEORIA_MODIFICADO/nbproject/private/
 /EJERCICIO2_TEORIA_MODIFICADO/build/
 /EJERCICIO3_TEORIA/build/
+/EJERCICIO6_TEORIA/build/
