--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /EJERCICIO2_TEORIA_MODIFICADO/build/
 /EJERCICIO3_TEORIA/build/
 /EJERCICIO6_TEORIA/build/
+/EJERCICIO10_TEORIA/nbproject/private/
