Commit: Subido ejercicio 1 funcionando

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /EJERCICIO6_TEORIA/build/
 /EJERCICIO10_TEORIA/nbproject/private/
 /EJERCICIO_REPASO_1/nbproject/private/
+/EJERCICIO_REPASO_1/build/
